utm/service/ingress/ingress-nginx-controller.yml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/component: controller
  ports:
    - name: http
      port: 80
      nodePort: 30080  # ⭐ 고정 포트 지정
      targetPort: 80
    - name: https
      port: 443
      nodePort: 30443  # ⭐ 고정 포트 지정
      targetPort: 443
